// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdastCollapseLink collapse link nodes 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "Kurzer Link: ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "https://www.ise.fraunhofer.de",
            },
          ],
          "title": null,
          "type": "link",
          "url": "https://www.ise.fraunhofer.de",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Langer Link: ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "https://www.ise.fraunhofer.de/conte…2017_e.pdf",
            },
          ],
          "title": null,
          "type": "link",
          "url": "https://www.ise.fraunhofer.de/content/dam/ise/en/documents/publications/studies/Stromerzeugung_2017_e.pdf",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "Beschrifteter Link",
            },
          ],
          "title": null,
          "type": "link",
          "url": "https://www.ise.fraunhofer.de/content/dam/ise/en/documents/publications/studies/Stromerzeugung_2017_e.pdf",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Textpassage",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "Hack",
                },
              ],
              "type": "emphasis",
            },
          ],
          "title": null,
          "type": "link",
          "url": "https://de.wikipedia.org/wiki/Hack",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;

exports[`mdastCollapseLink collapse link nodes w/ options 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "text",
          "value": "Kurzer Link: ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "https://ww–er.de",
            },
          ],
          "title": null,
          "type": "link",
          "url": "https://www.ise.fraunhofer.de",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Langer Link: ",
        },
        {
          "children": [
            {
              "type": "text",
              "value": "https://ww–e.pdf",
            },
          ],
          "title": null,
          "type": "link",
          "url": "https://www.ise.fraunhofer.de/content/dam/ise/en/documents/publications/studies/Stromerzeugung_2017_e.pdf",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "type": "text",
              "value": "Beschrifteter Link",
            },
          ],
          "title": null,
          "type": "link",
          "url": "https://www.ise.fraunhofer.de/content/dam/ise/en/documents/publications/studies/Stromerzeugung_2017_e.pdf",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "text",
          "value": "Textpassage",
        },
      ],
      "type": "paragraph",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "type": "text",
                  "value": "Hack",
                },
              ],
              "type": "emphasis",
            },
          ],
          "title": null,
          "type": "link",
          "url": "https://de.wikipedia.org/wiki/Hack",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "root",
}
`;
